# recicalje

./: .gitignore  AGENTS.md  Cargo.toml  MONITOREAR BOT.txt  README.md  auditar.py  check_positions.py  clob_daemon.py  emergency_cleanup.py  emergency_redeem.py  launch_all.ps1  onchain_redeem.py  reciclaje.csv  run_arbitrage.bat  run_bot.bat  scan_positions.py  setup_service.sh  stop_arbitrage.bat  stop_bot.bat
scratch/: check_kalshi_raw.py  check_market_min.py
src/: api.rs  audit.rs  audit_engine.rs  binance_ws.rs  clob_client.rs  config.rs  crisis_supervisor.rs  csv_logger.rs  discovery.rs  dual_market.rs  emergency_engine.rs  entry_engine.rs  equity_manager.rs  execution_engine.rs  execution_engine_safe.rs  kalshi_client.rs  lib.rs  main.rs  market_discovery.rs  monte_carlo_loss_sim.rs  polymarket_api.rs  reporting_engine.rs  risk_engine.rs  sizing.rs  state_machine.rs  stats.rs  stats_reporter.rs  strategy_manager.rs  telegram.rs  telegram_reporter.rs  time_utils.rs  tracker.rs  trade_validator.rs  venue_anomaly_engine.rs  volatility.rs  volume_tracker.rs
