[package]
name = "poly_rebound"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
futures = "0.3"
futures-util = "0.3"
url = "2.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
regex = "1.10"
